feat: request products by stock quantities
